--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,190 +1,203 @@
-.navbar{
-    background-color: white;
+.navbar {
+  background-color: white;
 }
+
 .nav-link {
-    color: gray;
-    font-weight: 500;
-    position: relative;
+  color: gray;
+  font-weight: 500;
+  position: relative;
 }
 
 .nav-link:hover,
 .nav-link:active {
-    color: black;
+  color: black;
 }
 
-.nav-link::before{
-    content: "";
-    position: absolute;
-    bottom: 0;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 0;
-    height: 2px;
-    background-color: aqua;
-    visibility: hidden;
-    transition: 0.3s ease-in-out;
+.nav-link::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 0;
+  height: 2px;
+  background-color: aqua;
+  visibility: hidden;
+  transition: 0.3s ease-in-out;
 }
 
-.nav-link:hover::before, .nav-link.active::before{
-    width: 100%;
-    visibility: visible;
+.nav-link:hover::before,
+.nav-link.active::before {
+  width: 100%;
+  visibility: visible;
 }
 
-.container-lg{
-    padding-top: 30px;
-    padding-bottom: 30px;
+.container-lg {
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 
 .card {
-    border-radius: 30px;
-    border-bottom-color: aqua;
+  border-radius: 30px;
+  border-bottom-color: aqua;
 }
 
 /*** Service ***/
 .service-item {
-    position: relative;
-    text-align: center;
+  position: relative;
+  text-align: center;
 }
 
 .service-item .service-img {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    overflow: hidden;
-    z-index: -1;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  overflow: hidden;
+  z-index: -1;
 }
 
 .service-item .service-img img {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    left: 0;
-    object-fit: cover;
-    transform: scale(1.2);
-    transition: .3s;
-    z-index: -1;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  object-fit: cover;
+  transform: scale(1.2);
+  transition: .3s;
+  z-index: -1;
 }
 
 .service-item:hover .service-img img {
-    transform: scale(1);
+  transform: scale(1);
 }
 
 .service-item .service-text {
-    background: #FFFFFF;
-    box-shadow: 0 0 45px rgba(0, 0, 0, .08);
-    transition: .3s;
+  background: #FFFFFF;
+  box-shadow: 0 0 45px rgba(0, 0, 0, .08);
+  transition: .3s;
 }
 
 .service-item:hover .service-text {
-    background: rgba(15, 66, 41, .6);
+  background: rgba(15, 66, 41, .6);
 }
 
 .service-item .service-text h4,
 .service-item .service-text p {
-    transition: .3;
+  transition: .3;
 }
 
 .service-item:hover .service-text h4 {
-    color: #FFFFFF;
+  color: #FFFFFF;
 }
 
 .service-item:hover .service-text p {
-    color: var(--light);
+  color: var(--light);
 }
 
 .service-item .service-text .btn-square {
-    width: 100px;
-    height: 100px;
-    background: transparent;
-    transition: .5s;
+  width: 100px;
+  height: 100px;
+  background: transparent;
+  transition: .5s;
 }
 
 .service-item:hover .service-text .btn-square {
-    background: var(--light);
+  background: var(--light);
 }
 
 .service-item .service-text .btn {
-    width: 31px;
-    height: 31px;
-    display: inline-flex;
-    align-items: center;
-    color: var(--dark);
-    background: var(--light);
-    white-space: nowrap;
-    overflow: hidden;
-    transition: .3s;
+  width: 31px;
+  height: 31px;
+  display: inline-flex;
+  align-items: center;
+  color: var(--dark);
+  background: var(--light);
+  white-space: nowrap;
+  overflow: hidden;
+  transition: .3s;
 }
 
 .service-item:hover .service-text .btn {
-    width: 112px;
+  width: 112px;
 }
 
 
 .product-item {
-    transition: .5s;
-  }
-  
-  .product-action {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: .5s;
-  }
-  
-  .product-action a.btn {
-    position: relative;
-    margin: 0 3px;
-    margin-top: 100px;
-    opacity: 0;
-  }
-  
-  .product-item:hover {
-    box-shadow: 0 0 30px #DDDDDD;
-  }
-  
-  .product-item:hover .product-action {
-    background: rgba(255, 255, 255, 0.7);
-  }
-  
-  .product-item:hover .product-action a.btn:first-child {
-    opacity: 1;
-    margin-top: 0;
-    transition: .3s 0s;
-  }
-  
-  .product-item:hover .product-action a.btn:nth-child(2) {
-    opacity: 1;
-    margin-top: 0;
-    transition: .3s .05s;
-  }
-  
-  .product-item:hover .product-action a.btn:nth-child(3) {
-    opacity: 1;
-    margin-top: 0;
-    transition: .3s .1s;
-  }
-  
-  .product-item:hover .product-action a.btn:nth-child(4) {
-    opacity: 1;
-    margin-top: 0;
-    transition: .3s .15s;
-  }
-  
-  .product-item .product-img img {
-    transition: .5s;
-  }
-  
-  .product-item:hover .product-img img {
-    transform: scale(1.2);
-  }
-  
-  .product-item .btn:hover {
-    color: #FFD333 !important;
-  }
+  transition: .5s;
+}
+
+.product-action {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: .5s;
+}
+
+.product-action a.btn {
+  position: relative;
+  margin: 0 3px;
+  margin-top: 100px;
+  opacity: 0;
+}
+
+.product-item:hover {
+  box-shadow: 0 0 30px #DDDDDD;
+}
+
+.product-item:hover .product-action {
+  background: rgba(255, 255, 255, 0.7);
+}
+
+.product-item:hover .product-action a.btn:first-child {
+  opacity: 1;
+  margin-top: 0;
+  transition: .3s 0s;
+}
+
+.product-item:hover .product-action a.btn:nth-child(2) {
+  opacity: 1;
+  margin-top: 0;
+  transition: .3s .05s;
+}
+
+.product-item:hover .product-action a.btn:nth-child(3) {
+  opacity: 1;
+  margin-top: 0;
+  transition: .3s .1s;
+}
+
+.product-item:hover .product-action a.btn:nth-child(4) {
+  opacity: 1;
+  margin-top: 0;
+  transition: .3s .15s;
+}
+
+.product-item .product-img img {
+  transition: .5s;
+}
+
+.product-item:hover .product-img img {
+  transform: scale(1.2);
+}
+
+.product-item .btn:hover {
+  color: #FFD333 !important;
+}
+
+.custom-control-a {
+  color: black;
+  text-decoration: none;
+}
+
+
+.distributor .sm-3 .img-distributor{
+  width: 100%;
+  height: 100%;
+}
