--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -42,88 +42,40 @@
   border-bottom-color: aqua;
 }
 
+
 /*** Service ***/
 .service-item {
-  position: relative;
-  text-align: center;
-}
-
-.service-item .service-img {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  overflow: hidden;
-  z-index: -1;
-}
-
-.service-item .service-img img {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  left: 0;
-  object-fit: cover;
-  transform: scale(1.2);
-  transition: .3s;
-  z-index: -1;
-}
-
-.service-item:hover .service-img img {
-  transform: scale(1);
-}
-
-.service-item .service-text {
-  background: #FFFFFF;
   box-shadow: 0 0 45px rgba(0, 0, 0, .08);
-  transition: .3s;
 }
 
-.service-item:hover .service-text {
-  background: rgba(15, 66, 41, .6);
-}
-
-.service-item .service-text h4,
-.service-item .service-text p {
-  transition: .3;
-}
-
-.service-item:hover .service-text h4 {
-  color: #FFFFFF;
-}
-
-.service-item:hover .service-text p {
-  color: var(--light);
-}
-
-.service-item .service-text .btn-square {
+.service-icon {
+  position: relative;
+  margin: -50px 0 25px 0;
   width: 100px;
   height: 100px;
-  background: transparent;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--primary);
+  background: #FFFFFF;
+  border-radius: 100px;
+  box-shadow: 0 0 45px rgba(0, 0, 0, .08);
   transition: .5s;
 }
 
-.service-item:hover .service-text .btn-square {
-  background: var(--light);
+.service-item:hover .service-icon {
+  color: #FFFFFF;
+  background: var(--primary);
 }
 
-.service-item .service-text .btn {
-  width: 31px;
-  height: 31px;
-  display: inline-flex;
-  align-items: center;
-  color: var(--dark);
-  background: var(--light);
-  white-space: nowrap;
-  overflow: hidden;
-  transition: .3s;
-}
-
-.service-item:hover .service-text .btn {
-  width: 112px;
+:root {
+  --primary: #32C36C;
+  --light: #F6F7F8;
+  --dark: #1A2A36;
 }
 
 
+/* produk detail style */
 .product-item {
   transition: .5s;
 }
@@ -208,3 +160,149 @@
   margin-top: 20px;
 
 }
+
+
+/* related */
+
+.product {
+  display: block;
+  width: 100%;
+  margin-bottom: 30px;
+  position: relative;
+  -moz-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  -webkit-transition: all 0.3s ease;
+  -ms-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+  border: 1px solid #f0f0f0; }
+  @media (max-width: 991.98px) {
+    .product {
+      margin-bottom: 30px; } }
+  .product .img-prod {
+    position: relative;
+    display: block;
+    overflow: hidden; }
+    .product .img-prod .overlay {
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      content: '';
+      opacity: 0;
+      background: #82ae46;
+      -moz-transition: all 0.3s ease;
+      -o-transition: all 0.3s ease;
+      -webkit-transition: all 0.3s ease;
+      -ms-transition: all 0.3s ease;
+      transition: all 0.3s ease; }
+    .product .img-prod span.status {
+      position: absolute;
+      top: 0;
+      left: 0;
+      padding: 2px 10px;
+      color: #fff;
+      font-weight: 300;
+      background: #82ae46;
+      font-size: 12px; }
+    .product .img-prod img {
+      -webkit-transform: scale(1);
+      -moz-transform: scale(1);
+      -ms-transform: scale(1);
+      -o-transform: scale(1);
+      transform: scale(1);
+      -moz-transition: all 0.3s ease;
+      -o-transition: all 0.3s ease;
+      -webkit-transition: all 0.3s ease;
+      -ms-transition: all 0.3s ease;
+      transition: all 0.3s ease; }
+    .product .img-prod:hover img, .product .img-prod:focus img {
+      -webkit-transform: scale(1.1);
+      -moz-transform: scale(1.1);
+      -ms-transform: scale(1.1);
+      -o-transform: scale(1.1);
+      transform: scale(1.1); }
+  .product .img {
+    display: block;
+    height: 500px; }
+  .product .icon {
+    width: 60px;
+    height: 60px;
+    background: #fff;
+    opacity: 0;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    border-radius: 50%;
+    -moz-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+    -webkit-transition: all 0.3s ease;
+    -ms-transition: all 0.3s ease;
+    transition: all 0.3s ease; }
+    .product .icon span {
+      color: #000000; }
+  .product:hover .icon {
+    opacity: 1; }
+  .product:hover .img-prod .overlay {
+    opacity: 0; }
+  .product .text {
+    background: #fff;
+    position: relative;
+    width: 100%; }
+    .product .text h3 {
+      font-size: 14px;
+      margin-bottom: 5px;
+      font-weight: 300;
+      text-transform: uppercase;
+      letter-spacing: 1px;
+      font-family: "Poppins", Arial, sans-serif; }
+      .product .text h3 a {
+        color: #000000; }
+    .product .text p.price {
+      margin-bottom: 0;
+      color: #82ae46;
+      font-weight: 400; }
+      .product .text p.price span.price-dc {
+        text-decoration: line-through;
+        color: #b3b3b3; }
+      .product .text p.price span.price-sale {
+        color: #82ae46; }
+    .product .text .pricing {
+      width: 100%;
+      -moz-transition: all 0.3s ease;
+      -o-transition: all 0.3s ease;
+      -webkit-transition: all 0.3s ease;
+      -ms-transition: all 0.3s ease;
+      transition: all 0.3s ease; }
+    .product .text .bottom-area {
+      position: absolute;
+      bottom: 15px;
+      left: 0;
+      right: 0;
+      opacity: 0;
+      -moz-transition: all 0.3s ease;
+      -o-transition: all 0.3s ease;
+      -webkit-transition: all 0.3s ease;
+      -ms-transition: all 0.3s ease;
+      transition: all 0.3s ease; }
+      .product .text .bottom-area a {
+        color: #fff;
+        width: 100%;
+        background: #82ae46;
+        width: 40px;
+        height: 40px;
+        margin: 0 auto;
+        -webkit-border-radius: 50%;
+        -moz-border-radius: 50%;
+        -ms-border-radius: 50%;
+        border-radius: 50%; }
+      .product .text .bottom-area .m-auto {
+        margin: 0 auto; }
+  .product:hover {
+    -webkit-box-shadow: 0px 7px 15px -5px rgba(0, 0, 0, 0.07);
+    -moz-box-shadow: 0px 7px 15px -5px rgba(0, 0, 0, 0.07);
+    box-shadow: 0px 7px 15px -5px rgba(0, 0, 0, 0.07); }
+    .product:hover .pricing {
+      opacity: 0; }
+    .product:hover .text .bottom-area {
+      opacity: 1; }
