--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -74,6 +74,18 @@
   --dark: #1A2A36;
 }
 
+/* Sidebar */
+.dropdown-item .custom-control-a:hover{
+  color: #82ae46;
+}
+.dropdowns .dropdown-item:hover{ 
+  color: #32C36C;
+}
+
+/* service */
+.bg-custom{
+  background-image: linear-gradient(#44D2D2,#E5D7D7);
+}
 
 /* produk detail style */
 .product-item {
@@ -160,6 +172,7 @@
   margin-top: 20px;
 
 }
+
 
 
 /* related */
