--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -75,16 +75,17 @@
 }
 
 /* Sidebar */
-.dropdown-item .custom-control-a:hover{
+.dropdown-item .custom-control-a:hover {
   color: #82ae46;
 }
-.dropdowns .dropdown-item:hover{ 
+
+.dropdowns .dropdown-item:hover {
   color: #32C36C;
 }
 
 /* service */
-.bg-custom{
-  background-image: linear-gradient(#44D2D2,#E5D7D7);
+.bg-custom {
+  background-image: linear-gradient(#44D2D2, #E5D7D7);
 }
 
 /* produk detail style */
@@ -161,12 +162,12 @@
 }
 
 
-.distributor .sm-3 .img-distributor{
+.distributor .sm-3 .img-distributor {
   width: 100%;
   height: 100%;
 }
 
-.col-detail{
+.col-detail {
   padding-top: 20px;
   padding-bottom: 20px;
   margin-top: 20px;
@@ -187,135 +188,206 @@
   -webkit-transition: all 0.3s ease;
   -ms-transition: all 0.3s ease;
   transition: all 0.3s ease;
-  border: 1px solid #f0f0f0; }
-  @media (max-width: 991.98px) {
-    .product {
-      margin-bottom: 30px; } }
-  .product .img-prod {
-    position: relative;
-    display: block;
-    overflow: hidden; }
-    .product .img-prod .overlay {
-      position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      content: '';
-      opacity: 0;
-      background: #82ae46;
-      -moz-transition: all 0.3s ease;
-      -o-transition: all 0.3s ease;
-      -webkit-transition: all 0.3s ease;
-      -ms-transition: all 0.3s ease;
-      transition: all 0.3s ease; }
-    .product .img-prod span.status {
-      position: absolute;
-      top: 0;
-      left: 0;
-      padding: 2px 10px;
-      color: #fff;
-      font-weight: 300;
-      background: #82ae46;
-      font-size: 12px; }
-    .product .img-prod img {
-      -webkit-transform: scale(1);
-      -moz-transform: scale(1);
-      -ms-transform: scale(1);
-      -o-transform: scale(1);
-      transform: scale(1);
-      -moz-transition: all 0.3s ease;
-      -o-transition: all 0.3s ease;
-      -webkit-transition: all 0.3s ease;
-      -ms-transition: all 0.3s ease;
-      transition: all 0.3s ease; }
-    .product .img-prod:hover img, .product .img-prod:focus img {
-      -webkit-transform: scale(1.1);
-      -moz-transform: scale(1.1);
-      -ms-transform: scale(1.1);
-      -o-transform: scale(1.1);
-      transform: scale(1.1); }
-  .product .img {
-    display: block;
-    height: 500px; }
-  .product .icon {
-    width: 60px;
-    height: 60px;
-    background: #fff;
-    opacity: 0;
-    -webkit-border-radius: 50%;
-    -moz-border-radius: 50%;
-    -ms-border-radius: 50%;
-    border-radius: 50%;
-    -moz-transition: all 0.3s ease;
-    -o-transition: all 0.3s ease;
-    -webkit-transition: all 0.3s ease;
-    -ms-transition: all 0.3s ease;
-    transition: all 0.3s ease; }
-    .product .icon span {
-      color: #000000; }
-  .product:hover .icon {
-    opacity: 1; }
-  .product:hover .img-prod .overlay {
-    opacity: 0; }
-  .product .text {
-    background: #fff;
-    position: relative;
-    width: 100%; }
-    .product .text h3 {
-      font-size: 14px;
-      margin-bottom: 5px;
-      font-weight: 300;
-      text-transform: uppercase;
-      letter-spacing: 1px;
-      font-family: "Poppins", Arial, sans-serif; }
-      .product .text h3 a {
-        color: #000000; }
-    .product .text p.price {
-      margin-bottom: 0;
-      color: #82ae46;
-      font-weight: 400; }
-      .product .text p.price span.price-dc {
-        text-decoration: line-through;
-        color: #b3b3b3; }
-      .product .text p.price span.price-sale {
-        color: #82ae46; }
-    .product .text .pricing {
-      width: 100%;
-      -moz-transition: all 0.3s ease;
-      -o-transition: all 0.3s ease;
-      -webkit-transition: all 0.3s ease;
-      -ms-transition: all 0.3s ease;
-      transition: all 0.3s ease; }
-    .product .text .bottom-area {
-      position: absolute;
-      bottom: 15px;
-      left: 0;
-      right: 0;
-      opacity: 0;
-      -moz-transition: all 0.3s ease;
-      -o-transition: all 0.3s ease;
-      -webkit-transition: all 0.3s ease;
-      -ms-transition: all 0.3s ease;
-      transition: all 0.3s ease; }
-      .product .text .bottom-area a {
-        color: #fff;
-        width: 100%;
-        background: #82ae46;
-        width: 40px;
-        height: 40px;
-        margin: 0 auto;
-        -webkit-border-radius: 50%;
-        -moz-border-radius: 50%;
-        -ms-border-radius: 50%;
-        border-radius: 50%; }
-      .product .text .bottom-area .m-auto {
-        margin: 0 auto; }
-  .product:hover {
-    -webkit-box-shadow: 0px 7px 15px -5px rgba(0, 0, 0, 0.07);
-    -moz-box-shadow: 0px 7px 15px -5px rgba(0, 0, 0, 0.07);
-    box-shadow: 0px 7px 15px -5px rgba(0, 0, 0, 0.07); }
-    .product:hover .pricing {
-      opacity: 0; }
-    .product:hover .text .bottom-area {
-      opacity: 1; }
+  border: 1px solid #f0f0f0;
+}
+
+@media (max-width: 991.98px) {
+  .product {
+    margin-bottom: 30px;
+  }
+}
+
+.product .img-prod {
+  position: relative;
+  display: block;
+  overflow: hidden;
+}
+
+.product .img-prod .overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  content: '';
+  opacity: 0;
+  background: #82ae46;
+  -moz-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  -webkit-transition: all 0.3s ease;
+  -ms-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+
+.product .img-prod span.status {
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 2px 10px;
+  color: #fff;
+  font-weight: 300;
+  background: #82ae46;
+  font-size: 12px;
+}
+
+.product .img-prod img {
+  -webkit-transform: scale(1);
+  -moz-transform: scale(1);
+  -ms-transform: scale(1);
+  -o-transform: scale(1);
+  transform: scale(1);
+  -moz-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  -webkit-transition: all 0.3s ease;
+  -ms-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+
+.product .img-prod:hover img,
+.product .img-prod:focus img {
+  -webkit-transform: scale(1.1);
+  -moz-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  -o-transform: scale(1.1);
+  transform: scale(1.1);
+}
+
+.product .img {
+  display: block;
+  height: 500px;
+}
+
+.product .icon {
+  width: 60px;
+  height: 60px;
+  background: #fff;
+  opacity: 0;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  border-radius: 50%;
+  -moz-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  -webkit-transition: all 0.3s ease;
+  -ms-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+
+.product .icon span {
+  color: #000000;
+}
+
+.product:hover .icon {
+  opacity: 1;
+}
+
+.product:hover .img-prod .overlay {
+  opacity: 0;
+}
+
+.product .text {
+  background: #fff;
+  position: relative;
+  width: 100%;
+}
+
+.product .text h3 {
+  font-size: 14px;
+  margin-bottom: 5px;
+  font-weight: 300;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-family: "Poppins", Arial, sans-serif;
+}
+
+.product .text h3 a {
+  color: #000000;
+}
+
+.product .text p.price {
+  margin-bottom: 0;
+  color: #82ae46;
+  font-weight: 400;
+}
+
+.product .text p.price span.price-dc {
+  text-decoration: line-through;
+  color: #b3b3b3;
+}
+
+.product .text p.price span.price-sale {
+  color: #82ae46;
+}
+
+.product .text .pricing {
+  width: 100%;
+  -moz-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  -webkit-transition: all 0.3s ease;
+  -ms-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+
+.product .text .bottom-area {
+  position: absolute;
+  bottom: 15px;
+  left: 0;
+  right: 0;
+  opacity: 0;
+  -moz-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  -webkit-transition: all 0.3s ease;
+  -ms-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+
+.product .text .bottom-area a {
+  color: #fff;
+  width: 100%;
+  background: #82ae46;
+  width: 40px;
+  height: 40px;
+  margin: 0 auto;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  border-radius: 50%;
+}
+
+.product .text .bottom-area .m-auto {
+  margin: 0 auto;
+}
+
+.product:hover {
+  -webkit-box-shadow: 0px 7px 15px -5px rgba(0, 0, 0, 0.07);
+  -moz-box-shadow: 0px 7px 15px -5px rgba(0, 0, 0, 0.07);
+  box-shadow: 0px 7px 15px -5px rgba(0, 0, 0, 0.07);
+}
+
+.product:hover .pricing {
+  opacity: 0;
+}
+
+.product:hover .text .bottom-area {
+  opacity: 1;
+}
+
+.whatsapp-button {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background-color: #25D366;
+  border-radius: 50%;
+  width: 60px;
+  height: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+  z-index: 1000;
+}
+
+.whatsapp-button .bi-whatsapp {
+  font-size: 30px;
+  color: white;
+}
